# StarRailDamageCal

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: release.yml
starrail_damage_cal/: __init__.py  cal_damage.py  data_paths.py  exception.py  logger.py  model.py  to_data.py  update.py  version.json  version.py
starrail_damage_cal/damage/: Avatar.py  Role.py  utils.py
starrail_damage_cal/damage/AvatarDamage/: AvatarDamage.py
starrail_damage_cal/damage/Base/: AvatarBase.py  RelicBase.py  SkillBase.py  WeaponBase.py  model.py
starrail_damage_cal/damage/Excel/: weapon_effect.json
starrail_damage_cal/damage/Relic/: Relic.py
starrail_damage_cal/damage/Weapon/: Weapon.py
starrail_damage_cal/excel/: AvatarPromotionConfig.json  AvatarPromotionConfigLD.json  AvatarRelicScore.json  EquipmentPromotionConfig.json  char_alias.json  light_cone_ranks.json  model.py  relic_scores.json
starrail_damage_cal/map/: SR_MAP_PATH.py  name_covert.py
starrail_damage_cal/map/data/: AvatarRelicScore.json  EquipmentID2AbilityProperty_mapping.json  EquipmentID2AbilityProperty_mapping_2.0.0.json  EquipmentID2AbilityProperty_mapping_2.7.0.json  EquipmentID2AbilityProperty_mapping_3.0.0.json  EquipmentID2AbilityProperty_mapping_3.1.0.json  EquipmentID2AbilityProperty_mapping_3.2.0.json  EquipmentID2AbilityProperty_mapping_3.3.0.json  EquipmentID2AbilityProperty_mapping_3.4.0.json  EquipmentID2AbilityProperty_mapping_3.5.0.json  EquipmentID2AbilityProperty_mapping_3.6.0.json  EquipmentID2AbilityProperty_mapping_3.7.0.json  EquipmentID2EnName_mapping.json  EquipmentID2EnName_mapping_2.0.0.json  EquipmentID2EnName_mapping_2.7.0.json  EquipmentID2EnName_mapping_3.0.0.json  EquipmentID2EnName_mapping_3.1.0.json  EquipmentID2EnName_mapping_3.2.0.json  EquipmentID2EnName_mapping_3.3.0.json  EquipmentID2EnName_mapping_3.4.0.json  EquipmentID2EnName_mapping_3.5.0.json  EquipmentID2EnName_mapping_3.6.0.json  EquipmentID2Name_mapping.json  EquipmentID2Name_mapping_2.0.0.json  EquipmentID2Name_mapping_2.7.0.json  EquipmentID2Name_mapping_3.0.0.json  EquipmentID2Name_mapping_3.1.0.json  EquipmentID2Name_mapping_3.2.0.json  EquipmentID2Name_mapping_3.3.0.json  EquipmentID2Name_mapping_3.4.0.json  EquipmentID2Name_mapping_3.5.0.json  EquipmentID2Name_mapping_3.6.0.json  EquipmentID2Name_mapping_3.7.0.json  EquipmentID2Rarity_mapping.json  EquipmentID2Rarity_mapping_2.0.0.json  EquipmentID2Rarity_mapping_2.7.0.json  EquipmentID2Rarity_mapping_3.0.0.json  (+166 more)
starrail_damage_cal/mihomo/: __init__.py  models.py  requests.py
starrail_damage_cal/mono/: Character.py
test/: test.json  test_core_fixes.py  test_get_char.py  test_update.py
(+1 files in other folders)
