[project]
name = "starrail_damage_cal"
version = "1.0.4"
description = "For StarRail Role Damage Cal"
authors = [
    {name = "qwerdvd", email = "105906879+qwerdvd@users.noreply.github.com"},
]
dependencies = [
    "msgspec>=0.18.4",
    "httpx>=0.25.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

packages = [{ include = "starrail_damage_cal" }]

[tool.ruff]
select = ["ALL"]
ignore = [
    "E402",
    "B008",
    "F403",
    "F405",
    "RET505",
    "N816",
    "N815",
    "ANN101",
    "N806",
    "FA100",
    "PLR",
    "C901",
    "N803",
    "N802",
    "ANN",
    "ERA001",
    "E501",
    "D",
    "N999",
    "ARG",
    "COM812",
    "N801",
    "ISC"
]
line-length = 88
target-version = "py38"
ignore-init-module-imports = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
]
lint = [
    "ruff>=0.1.3",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
reportShadowedImports = false
pythonVersion = "3.8"
pythonPlatform = "All"
executionEnvironments = [{ root = "./starrail_damage_cal/" }]
