[project]
name = "starrail_damage_cal"
version = "4.2.1"
description = "For StarRail Role Damage Cal"
authors = [
    {name = "qwerdvd", email = "105906879+qwerdvd@users.noreply.github.com"},
    {name = "ilnli", email = "220916405+ilnli@users.noreply.github.com"},
]
dependencies = [
    "msgspec>=0.20.0,<1",
    "httpx>=0.28.1,<1",
    "aiohttp>=3.13.4,<4"
]
repository = "https://github.com/baiqwerdvd/StarRailDamageCal"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

packages = [{ include = "starrail_damage_cal" }]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E402",
    "B008",
    "F403",
    "F405",
    "RET505",
    "N816",
    "N815",
    "N806",
    "FA100",
    "PLR",
    "C901",
    "N803",
    "N802",
    "ANN",
    "ERA001",
    "E501",
    "D",
    "N999",
    "ARG",
    "COM812",
    "N801",
    "ISC",
    "TID252"
]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.4.2,<9",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.1.0,<8",
]
lint = [
    "ruff>=0.15.8,<1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
reportShadowedImports = false
pythonVersion = "3.11"
pythonPlatform = "All"
executionEnvironments = [{ root = "./starrail_damage_cal/" }]

[tool.pytest.ini_options]
testpaths = ["test"]



